--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 		<filter-class>com.jfinal.core.JFinalFilter</filter-class>
 		<init-param>
 			<param-name>configClass</param-name>
-			<param-value>cn.leap.Config</param-value>
+			<param-value>com.football.Config</param-value>
 		</init-param>
 	</filter>
 	
